--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </h1>
                     <p class="about_me_text">Focused professional having excellent technical and communication skills,
                         and offering experience of over an year in Computer industry. I am a software engineer with
-                        robust problem-solving skills. I am currently working as engineer in DevOps at <span
+                        robust problem-solving skills. I am currently pursuing my masters in Computer Science. <span
                             class="text-highlight">Gap Inc.</span></span> with experience of over an year in developing
                         ITSM processes. I am passionate about <span class="text-highlight">full stack web development
                             technologies</span> to build mobile and web apps.<br><br>I also enjoy <span
