--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                         Hi,I'm <br><span class="home__title-color">Sri Swathi</span><br>
                     </h1>
                     <p class="about_me_text">Focused professional having excellent technical and communication skills,
-                        and offering experience of over an year in Computer industry. I am a software engineer with
-                        robust problem-solving skills. I am currently pursuing my masters in Computer Science. <span
-                            class="text-highlight">Gap Inc.</span></span> with experience of over an year in developing
-                        ITSM processes. I am passionate about <span class="text-highlight">full stack web development
+                        and offering experience of over 3 years in the IT industry. I am a software engineer with
+                        robust problem-solving skills. I am currently pursuing my masters in Computer Science <span
+                            class="text-highlight">at Montclair State University, NJ.</span></span>
+                    I am passionate about <span class="text-highlight">full stack web development
                             technologies</span> to build mobile and web apps.<br><br>I also enjoy <span
                             class="text-highlight">teaching</span> and never miss a chance to <span
                             class="text-highlight">network</span> with new people. </p>
@@ -108,20 +108,39 @@
                 <span class="section-title"> Work & Co-Curricular Experience </span>
             </h1>
             <div class="timeline">
+                <div class="timeline-box">
+                    <div class="timeline-container">
+                        <h3 class="experience-designation  m0 m-blue">Graduate Assistant</h3>
+                        <h4 class="experience-company-name"> Montclair State University </h4>
+                        <h5 class="experience-duration m0"> May, 2024 - Present </h5>
+
+                        <p class="experience-description text-align-justify">Worked as a teaching assistant for Data
+                            Structures & Algorithms Course. My motto is to help students to learn and grow.</p>
+
+                    </div>
+                </div>
 
                 <div class="timeline-box ">
                     <div class="timeline-container">
                         <h3 class="experience-designation  m0 m-blue">Software Engineer</h3>
                         <h4 class="experience-company-name"> Gap Inc., Hyderabad, India </h4>
-                        <h5 class="experience-duration m0"> July, 2021 - Present </h5>
+                        <h5 class="experience-duration m0"> July, 2021 - December, 2023 </h5>
 
-                        <p class="experience-description text-align-justify">Currently, I am working as ServiceNow Admin
-                            and Developer. I work on development of various ITSM processes, i.e. Incident,
-                            Problem,Change, Knowledge, etc. as per the ITIL standards. <br>Integrated Third-Party vendor
-                            tools with ServiceNow using REST APIs to automate various processes to increase the
-                            efficiency of user interaction with systems.<br>Developed various employee self-service
-                            portals like Tech Resource Center, Store Support and Global Store using Service
-                            Portal(Angular based web development framework).</p>
+                        <p class="experience-description text-align-justify">• Developed dynamic, responsive web content for Old Navy, resulting in a 10% increase in conversion rates through A/B testing and personalized user experiences.
+• Built and maintained scalable, reusable user interfaces using React, leveraging advanced React features like hooks, context API, custom hooks and Next.js for maintainable codebase.
+• Implemented personalization and optimization using Optimizely platform and utilized Amplience tool to streamline content management and delivery.
+• Reduced page load times by 15% through performance optimizations, including lazy loading, code splitting, and image optimization.
+• Collaborated with cross-functional teams with designers to convert Figma mockups into pixel-perfect, responsive interfaces.
+• Contributed to Agile sprints, participating in daily stand-ups, sprint planning, and retrospectives to ensure timely, high-quality feature delivery.
+• Technologies: React, Next.js, Bootstrap, Tailwind CSS, JavaScript, XHTML, JSON, Optimizely, Amplience, Figma.
+• Developed and maintained Spring Boot Microservices to efficiently fetch, process, and integrate product data across applications.
+• Built REST APIs to support seamless communication between upstream and downstream systems.
+• Achieved 25% faster data processing by optimizing SQL queries in Oracle databases.
+• Implemented CI/CD pipelines using Jenkins to automate build, test, and deployment workflows, ensuring faster delivery cycles.
+• Integrated Docker for containerized application deployment, ensuring consistency across development and production environments.
+• Worked with STIBO Step Product Information Management System to maintain data reliability.
+• Technologies: Java, Spring Boot, REST API, Oracle SQL, Jenkins, Docker, CI/CD.                            
+ </p>
 
                     </div>
                 </div>
@@ -218,6 +237,19 @@
             </h1>
 
             <div class="timeline">
+                <div class="timeline-box right ">
+                    <div class="timeline-container">
+                        <h3 class="experience-designation  m0 m-blue"> Masters </h3>
+                        <h4 class="experience-company-name "> Montclair State University </h4>
+                        <h4 class="experience-duration m0"> New Jersey, USA</h5>
+
+                            <h5 class="experience-duration m0"> January, 2024 - Present</h5>
+
+                            <p class="experience-description text-align-justify"> Major - Computer Science</p>
+                            <p class="experience-description text-align-justify"> CGPA - 3.95</p>
+                    </div>
+                </div>
+                
                 <div class="timeline-box left ">
                     <div class="timeline-container">
                         <h3 class="experience-designation  m0 m-blue"> Bachelor of Engineering </h3>
@@ -689,7 +721,7 @@
     <footer>
         <div class="container-fluid footer mt-3">
             <p class="text-center p-2 mb-0" style="color: white;">
-                &#169; Copyright 2022
+                &#169; Copyright 2025
                 <br>
                 Created with &hearts; by <span class="text-highlight">Sri Swathi Nimmagadda</span>
             </p>
