--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
                         <h4 class="experience-company-name"> Montclair State University </h4>
                         <h5 class="experience-duration m0"> May, 2024 - Present </h5>
 
-                        <p class="experience-description text-align-justify">Worked as a teaching assistant for Data
-                            Structures & Algorithms Course. My motto is to help students to learn and grow.</p>
+                        <p class="experience-description text-align-justify">Teach and mentor undergraduate students in core computer science courses 
+including Python, Data Structures & Algorithms and Computer Systems Principles.
+Lead and manage student projects, including Raspberry Pi, fostering problem-solving and technical skills.</p>
 
                     </div>
                 </div>
